<resources>
    <string name="app_name" translatable="false">Worderland</string>
    <string name="home">Start game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="myAchivements">My Scores</string>
    <string name="settings">Settings</string>
    <string name="refreshWords">Refresh words</string>
    <string name="lgEnglish">English</string>
    <string name="lgSerbian">Serbian</string>
    <string name="language">Language</string>
    <string name="welcome">Welcome</string>
    <string name="username">username</string>
    <string name="play">Play!</string>
    <string name="topScores">Top scores</string>
    <string name="easy" translatable="false">Easy</string>
    <string name="medium" translatable="false">Medium</string>
    <string name="hard" translatable="false">Hard</string>
    <string name="myhighscore">My highscore:</string>
    <string name="Worderland" translatable="false">Worderland</string>
    <string name="switchShowOnLB">Show my result on global leaderboard</string>
    <string name="totalgames">Total games played:</string>
    <string name="maxwords">Max words in game:</string>
    <string name="mintime">Min time in game:</string>
</resources>